<resources>
    <string name="app_name">EDGE \'20</string>
    <string name="app_name1">EDGE</string>
    <string name="title_home">EDGE \'20</string>
    <string name="title_intra">Intra</string>
    <string name="title_sett">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_theme">Theme</string>
    <string name="action_theme_night">Dark theme</string>
    <string name="action_theme_day">Light theme</string>
    <string name="action_theme_battery">Based on battery saver</string>
    <string name="action_theme_system">Based on system theme</string>
    <string name="sub_events_num">%d event%s</string>
    <string name="event_details_overview">Overview</string>
    <string name="event_details_schedule">Schedule</string>
    <string name="event_details_rules">Rules</string>
    <string name="event_details_contacts">Contacts</string>
    <string name="generic_pguest">Previous Guests</string>
    <string name="generic_iguest">Intended Guests</string>
    <string name="sett_user_ic">User image</string>
    <string name="sett_sign_in">SIGN IN</string>
    <string name="about_licences">LIBRARIES</string>
    <string name="about_privacy">PRIVACY POLICY</string>
    <string name="sett_not_signed_in">Not signed in</string>
    <string name="sett_signin_message">Feature will be implemented after the API is done</string>
    <string name="sett_theme">Change app theme</string>
    <string name="sett_event_update_notif_title">show update notifications</string>
    <string name="sett_event_update_notif_desc">Show notifications when details for any event
        updates
    </string>
    <string name="sett_upcoming_notif_title">show event start notifications</string>
    <string name="sett_upcoming_notif_desc">If you are following any events, show notifications
        before it starts
    </string>
    <string name="event_details_pending">Details for this event are unavailable right now.</string>
    <string name="team_title">Team</string>
    <string name="team_desc">The core members of Geekonix</string>
    <string name="about_title">About Us</string>
    <string name="about_desc">Know more about EDGE</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="upcoming_desc">Pre-EDGE events, coming soon</string>
    <string name="game_title">EDGE Slice</string>
    <string name="game_desc">A simple game to pass the time</string>
    <string name="sponsors_title">Sponsors</string>
    <string name="sponsors_desc">Those who help make EDGE happen</string>
    <string name="member_image">Member Image</string>
    <string name="about_tmsl_h">Techno Main Salt Lake</string>
    <string name="about_gx_h">Geekonix</string>
    <string name="about_edge_h">EDGE</string>
    <string name="about_appweb_h">App &amp; Website</string>
    <string name="about_quick_links">Quick Links</string>
    <string name="about_tmsl">Located amidst the hustle and bustle of the City of Joy, Techno Main,
        Salt Lake is an engineering and management college affiliated to MAKAUT, accredited by NBA
        and approved by AICTE. It stands strong with its vast campus and faculty members who
        strengthen its foundation, making Techno Main, Salt Lake one of the most famous colleges in
        West Bengal. Techno Main has been inspiring and moulding young minds to become the future of
        the world through their unique endeavour, ever since it was established in 2001.
    </string>
    <string name="about_gx">GEEKONIX is the official science and technology club of Techno Main,
        Salt Lake. It was formed in 2005 with the sole intent of equipping young minds with the
        ability to think out of the box and ideate, innovate, create and execute events that would
        aim to promote their creativity and inculcate management and communication skills. Over the
        years, Geekonix has not only inspired young minds but has also developed a platform where
        the students have been nurtured and their ideas have been given a practical shape to improve
        their technical abilities as well as the reputation of the institute as a leader in
        innovation and creativity.
    </string>
    <string name="about_edge">EDGE is the annual techno-management festival of Techno Main, Salt
        Lake, organized by Geekonix, which aims at providing a common platform to unite students
        from various colleges to showcase and nurture their technical skills and innovativeness
        irrespective of their seniority, branch or experience. It is a 3 day long extravaganza which
        encompasses more than 50+  events under the flagships of Compute Aid, RRC (Robotics), Cyber
        Crusade, Infocus, CIIC, Newron Elevation, Food for fun, Fun events etc. With a total prize
        money of up to 7.75 lakhs, Edge witnesses one of the largest footfall of this region with
        participants from more than 130+ different colleges pan-India. Edge creates an arena for
        young and aspiring minds to compete, succeed, leave a mark and create memories through
        recreation and relaxation of mind, to be cherished forever. For the past 13 years, Edge has
        delivered its promise of bringing the best of events and memories and pave the path for
        talented young minds to showcase their talents. With the fourteenth iteration of Edge coming
        up, we hope to take the bars higher still, and reach more milestones and be an unforgettable
        experience for all who witness this magnificent fest.
    </string>
    <string name="placeholder_desc">Coming soon in a later update.</string>
    <string name="accommodation_title">Accommodation</string>
    <string name="accommodation_desc">Accommodation during edge</string>
    <string name="registration_title">Registration</string>
    <string name="registration_desc">Register for EDGE</string>
    <string name="registration_details">To register for EDGE events, visit the site below.</string>
    <string name="results_title">Results</string>
    <string name="results_desc">Results for events under EDGE</string>
    <string name="results_wait">Fetching details</string>
    <string name="results_fetch_fail">Failed to fetch results</string>
    <string name="results_not_decl">Results have not been declared yet</string>
    <string name="sponsor_fetch_fail">Failed to fetch the list of sponsors</string>
    <string name="loading">Loading…</string>
    <string name="ca_title">Campus Ambassador</string>
    <string name="ca_desc">Registrations are open</string>
    <string name="ca_long_desc">Hello all social butterflies out there, who are not students of TMSL, but
        are intrigued to be a part of Eastern India\'s 2nd largest techno-management fest, EDGE.
        Don\'t worry, as EDGE is proud to announce the kickoff of its highly anticipated Campus
        Ambassador programme.\n\Why, you ask? What\'s in it for me? Glad you asked. This programme
        entails the following for the Campus Ambassadors:\n\n1) Imbue leadership and management
        skills.\n2) The top 10 CAs get assured e-certificates.\n3) A chance to win exciting gifts
        and accessories\n4) The top 5 Campus Ambassadors will get certificates along with goodies.
        \n5) The top 3 CAs will get goodies, certificates, and a recommendation letter from the
        teacher convenor of our Technical Committee, as well as a LinkedIn recommendation from our
        official page.\n6) Exciting goodies at the end of every month for the highest point scorers.
        \n7) The entire system of how to score points will be explained through a meeting, which
        will be held after we declare our final list of CAs.\n8) An unparalleled experience of
        associating with EDGE.
    </string>
    <string name="ca_register">Register</string>
    <string name="ca_brochure">Read the brochure</string>
    <string name="eventdetails_register">Register</string>
    <string name="ca_account_no_log">If you are already a Campus Ambassador, log in above with the
        same Google account used to fill the registration form.
    </string>
    <string name="ca_account_not_ca">This account does not belong to a Campus Ambassador. If you are
        already a Campus Ambassador, log in above with the same Google account used to fill the
        registration form.
    </string>
    <string name="ca_firestore_error">Failed to fetch details</string>
    <string name="ca_points_template">Points: %d</string>
    <string name="ca_points_button">Current Points</string>
    <string name="ca_rules_button">Points Table</string>
    <string name="ca_perks_button">Rewards</string>
    <string name="intra_coming_soon">Intra events will be announced soon</string>
    <string name="app_update_cancel">Update canceled. Some data may be out of date.</string>
    <string name="auth_login">Log In</string>
    <string name="auth_logout">Log Out</string>
    <string name="auth_failed_name">Unknown User</string>
    <string name="auth_failed_desc">Please log out and log in again</string>
    <string name="auth_notlog_name">Not Logged In</string>
    <string name="auth_notlog_desc">Log in using Google</string>
    <string name="auth_failed">Failed to sign in. %s</string>
</resources>
