<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.edge2.views.GeneralHeaderView
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:name="@string/title_sett"
            app:icon="@drawable/ic_sett"
            app:flip="true" />

        <LinearLayout
            android:id="@+id/sett_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_huge">

            <com.edge2.settings.views.SwitchItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchText="@string/sett_event_update_notif_title"
                app:switchDesc="@string/sett_event_update_notif_desc"
                app:switchKey="sett_up_notif"
                app:switchHeaderStyle="@style/TextHeader"
                app:switchDescStyle="@style/TextBody" />

            <com.edge2.settings.views.SwitchItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchText="@string/sett_upcoming_notif_title"
                app:switchDesc="@string/sett_upcoming_notif_desc"
                app:switchKey="sett_ev_st_notif"
                app:switchHeaderStyle="@style/TextHeader"
                app:switchDescStyle="@style/TextBody"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/sett_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHeader"
                android:text="@string/sett_theme"
                android:background="@drawable/general_ripple"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:paddingTop="@dimen/margin_large"
                android:paddingBottom="@dimen/margin_large" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>