<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/events_to_quick_root_transition"
    android:background="@color/windowBackground">

    <!--Can't have NestedScrollView as the parent. Causes ScrollView position to be lost.-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/placeholder_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.edge2.views.GeneralHeaderView
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:name="@string/upcoming_title"
                tools:desc="@string/upcoming_desc"
                tools:icon="@drawable/ic_upcoming"
                app:flip="true"
                app:hideImage="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/placeholder_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_desc"
                    style="@style/TextHeader"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp"
                    android:background="@drawable/card_bg" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>